<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_keys"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.easylabs.residentevil7guidee.KeysActivity"
    android:orientation="vertical"
    android:background="@drawable/coinsbackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/keys_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKeys_1"
                android:textColor="?android:attr/textColorPrimaryInverse"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:srcCompat="@drawable/keysim1"
                android:id="@+id/ivBackpack_1"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/keys_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKeys_2"
                android:textColor="?android:attr/textColorPrimaryInverse"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/keysim2"
                android:id="@+id/ivBackpack_2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/keys_text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKeys_3"
                android:textColor="?android:attr/textColorPrimaryInverse"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/keysim3"
                android:id="@+id/ivBackpack_3"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/keys_text_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKeys_4"
                android:textColor="?android:attr/textColorPrimaryInverse"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/keysim4"
                android:id="@+id/ivBackpack_4"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/keys_text_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKeys_5"
                android:textColor="?android:attr/textColorPrimaryInverse"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/keysim5"
                android:id="@+id/ivBackpack_5"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/keys_text_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKeys_6"
                android:textColor="?android:attr/textColorPrimaryInverse"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/keysim6jpg"
                android:id="@+id/ivBackpack_6"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/keys_text_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKeys_7"
                android:textColor="?android:attr/textColorPrimaryInverse"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/keysim7"
                android:id="@+id/ivBackpack_7"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/keys_text_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKeys_8"
                android:textColor="?android:attr/textColorPrimaryInverse"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/keysim8"
                android:id="@+id/ivBackpack_8"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/keys_text_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKeys_9"
                android:textColor="?android:attr/textColorPrimaryInverse"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/keysim9"
                android:id="@+id/imageView16"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/keys_text_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKeys_10"
                android:textColor="?android:attr/textColorPrimaryInverse"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/keysim10"
                android:id="@+id/imageView17"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/keys_text_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKeys_11"
                android:textColor="@android:color/background_light"/>

            <TextView
                android:text="https://www.youtube.com/watch?v=6XY-nj-LWtY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvBackpackLink"
                android:autoLink="web"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
