<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_repair_kits"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.easylabs.residentevil7guidee.RepairKitsActivity"
    android:orientation="vertical"
    android:background="@drawable/coinsbackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/repkit_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRepKits_1"
                android:textColor="@android:color/background_light"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:srcCompat="@drawable/repairkitim1"
                android:id="@+id/imageRepKits_1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/repkit_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textColor="@android:color/background_light"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:srcCompat="@drawable/repairkitim2"
                android:id="@+id/imageRepKits_2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/repkit_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRepKits_3"
                android:textColor="@android:color/background_light"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:srcCompat="@drawable/repairkitim3"
                android:id="@+id/imageRepKits_3"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/repkit_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRepKits_4"
                android:textColor="@android:color/background_light"/>

            <TextView
                android:text="https://www.youtube.com/watch?v=8OG-J6LqNcM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRepKitsLink"
                android:autoLink="web"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
