<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_backpack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.easylabs.residentevil7guidee.BackpackActivity"
    android:orientation="vertical"
    android:background="@drawable/coinsbackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/backpack_part1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvBackpack_1"
                android:textColor="@android:color/background_light"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/ivBackpack_1"
                app:srcCompat="@drawable/backpackim1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/backpack_part2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvBackpack_2"
                android:textColor="@android:color/background_light"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:srcCompat="@drawable/backpackim2"
                android:id="@+id/ivBackpack_2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/backpack_part3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvBackpack_3"
                android:textColor="@android:color/background_light"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:srcCompat="@drawable/backpackim3"
                android:id="@+id/ivBackpack_3"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/backpack_part4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvBackpack_4"
                android:textColor="@android:color/background_light"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:srcCompat="@drawable/backpackim4"
                android:id="@+id/ivBackpack_4"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
