<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_steroids"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.easylabs.residentevil7guidee.SteroidsActivity"
    android:background="@drawable/coinsbackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/steroids_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvSteroids_1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@android:color/background_light"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/steroidsim1"
                android:id="@+id/ivSteroids_1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/steroidsim2"
                android:id="@+id/ivSteroids_2"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:text="@string/steroids_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvSteroids_2"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/background_light"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/steroidsim3"
                android:id="@+id/ivSteroids_3"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/steroidsim4"
                android:id="@+id/ivSteroids_4"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:text="@string/steroids_text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvSteroids_3"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/background_light"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/steroidsim5"
                android:id="@+id/ivSteroids_5"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/steroidsim6"
                android:id="@+id/ivSteroids_6"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
